# cognihub_pygotemplate

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  pyproject.toml  setup.py  test_render.py
.github/workflows/: build-wheels.yml
cognihub_pygotemplate/: engine.py  renderer.go
tests/: __init__.py  test_engine.py  test_functionality.py  test_performance.py  test_real_integration.py
